# sop-agent

./: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  SETUP_GUIDE_JA.md  pyproject.toml  requirements.txt  setup.sh
.agents/skills/: README.md
.agents/skills/bot-analysis/: SKILL.md
.agents/skills/request-api-key/: SKILL.md
.agents/skills/stage1-clustering/: SKILL.md
.agents/skills/stage2-extraction/: SKILL.md
.agents/skills/stage3-sop-generation/: SKILL.md
.agents/skills/stage5-sop-to-guide/: SKILL.md
.agents/skills/userchat-to-sop-pipeline/: SKILL.md
.claude/: settings.json
.claude/skills/: README.md
.claude/skills/evaluate-rag/: SKILL.md
.claude/skills/evaluate-task/: SKILL.md
.claude/skills/stage1-clustering/: SKILL.md
.claude/skills/stage2-extraction/: SKILL.md
.claude/skills/stage3-sop-generation/: SKILL.md
docs/: README.md  clustering-guide.md
lang/: ja.yaml
rules/: agent-sop-format.md
scripts/: analyze_dialogs.py  check_dependencies.sh  config.py  enrich_patterns.py  extract_sop_data.py  generate_sales_report.py  generate_sops.py  pipeline.py  validate_sop_analysis.py
scripts/clustering/: README.md  __init__.py  clustering.py  data_loader.py  embeddings.py  output.py  pii_masker.py  tagging.py  text_enhancer.py
spec/: clustering-sop-spec.md
templates/: ALF_PACKAGE_template.md  ALF_RULES_DRAFT_template.md  AUTOMATION_ANALYSIS_template.md  FLOWCHART_template.md  HT_template.md  QA_SCENARIOS_template.md  README.md  SALES_REPORT_template.md  TASK_template.md  TS_template.md
(+7 files in other folders)
