[tool.poetry]
name = "sop-agent"
version = "0.1.0"
description = "Userchat-to-SOP Pipeline"
authors = ["Pete"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pandas = "2.3.3"
numpy = "2.0.2"
openai = "2.29.0"
anthropic = "0.96.0"
hdbscan = "0.8.41"
scikit-learn = "1.6.1"
openpyxl = "3.1.5"
tqdm = "4.67.3"
python-dotenv = "1.2.1"
pyyaml = "6.0.3"
matplotlib = "3.9.4"
umap-learn = "0.5.12"
sentence-transformers = "5.1.2"
torch = "2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
